--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "auth": "^1.2.3",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
-    "next": "15.0.1",
+    "next": "^15.0.1",
+    "next-auth": "^4.24.10",
     "prisma": "^5.22.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
