--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.0.1",
     "next-auth": "^4.24.10",
     "prisma": "^5.22.0",
+    "qs": "^6.13.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-use": "^17.5.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/qs": "^6.9.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
